crates/gql_codegen_core/tests/generators/typescript/snapshots/generators__typescript__inputs__inputs_avoid_optionals.snap
---
source: crates/gql_codegen_core/tests/generators/typescript/inputs.rs
expression: output
---
export interface PaginationInput {
  readonly page: number;
  readonly perPage: number | null;
}

export interface Query {
  readonly __typename?: 'Query';
  readonly _empty?: string | null;
  readonly search: ReadonlyArray<string>;
}

export interface QuerySearchArgs {
  readonly filter: SearchFilter;
}

export interface SearchFilter {
  readonly query: string;
  readonly limit: number | null;
  readonly tags: ReadonlyArray<string> | null;
}
