crates/gql_codegen_core/tests/generators/typescript/snapshots/generators__typescript__inputs__inputs_default.snap
---
source: crates/gql_codegen_core/tests/generators/typescript/inputs.rs
expression: output
---
export type Maybe<T> = T | null;

export interface Query {
  __typename: 'Query';
  _empty: Maybe<string>;
  search: Array<string>;
}

export interface SearchFilter {
  query: string;
  limit?: Maybe<number>;
  tags?: Maybe<Array<string>>;
}

export interface PaginationInput {
  page: number;
  perPage?: Maybe<number>;
}
