crates/gql_codegen_core/tests/generators/typescript/snapshots/generators__typescript__inputs__inputs_immutable.snap
---
source: crates/gql_codegen_core/tests/generators/typescript/inputs.rs
expression: output
---
export type Maybe<T> = T | null;

export interface Query {
  readonly __typename: 'Query';
  readonly _empty: Maybe<string>;
  readonly search: Array<string>;
}

export interface SearchFilter {
  readonly query: string;
  readonly limit?: Maybe<number>;
  readonly tags?: Maybe<Array<string>>;
}

export interface PaginationInput {
  readonly page: number;
  readonly perPage?: Maybe<number>;
}
