crates/gql_codegen_core/tests/generators/typescript/snapshots/generators__typescript__inputs__inputs_maybe_value.snap
---
source: crates/gql_codegen_core/tests/generators/typescript/inputs.rs
expression: output
---
export type Maybe<T> = T | null | undefined;

export interface Query {
  __typename: 'Query';
  _empty: string | null | undefined;
  search: Array<string>;
}

export interface SearchFilter {
  query: string;
  limit?: number | null | undefined;
  tags?: Array<string> | null | undefined;
}

export interface PaginationInput {
  page: number;
  perPage?: number | null | undefined;
}
