crates/gql_codegen_core/tests/generators/typescript/snapshots/generators__typescript__inputs__inputs_separate_maybe_types.snap
---
source: crates/gql_codegen_core/tests/generators/typescript/inputs.rs
expression: output
---
export type Maybe<T> = Maybe<T>;

export interface Query {
  __typename: 'Query';
  _empty: Maybe<string>;
  search: Array<string>;
}

export interface SearchFilter {
  query: string;
  limit?: InputMaybe<number>;
  tags?: InputMaybe<Array<string>>;
}

export interface PaginationInput {
  page: number;
  perPage?: InputMaybe<number>;
}
